fix: test progress bar radius on mobile + test menu title translation updated

--- a/src/app/pages/test/test-progress/test-progress.component.scss
+++ b/src/app/pages/test/test-progress/test-progress.component.scss
@@ -2,6 +2,13 @@
   display: grid;
   place-items: center;
   padding: 0 24px;
+
+  .mat-progress-bar,
+  .mat-progress-bar ::ng-deep .mat-progress-bar-fill,
+  .mat-progress-bar ::ng-deep .mat-progress-bar-fill::after {
+    border-radius: 18px;
+    -webkit-border-radius: 18px;
+  }
 }
 
 .progress-bar-container {
@@ -23,16 +30,6 @@
   .mat-progress-bar {
     height: 18px;
   }
-
-
-  .mat-progress-bar,
-  .mat-progress-bar::-webkit-progress-bar,
-  .mat-progress-bar .mat-progress-bar-fill,
-  .mat-progress-bar .mat-progress-bar-fill::after {
-    border-radius: 18px;
-    -webkit-border-radius: 18px;
-  }
-
 }
 
 
